Fix spacing on footer and nav

--- a/css/roundlings.css
+++ b/css/roundlings.css
@@ -63,7 +63,7 @@ h1 {
 
 nav > a {
   display: inline-block;
-  margin: 0 8px;
+  padding: 0 8px;
   font-weight: bold;
   color: rgba(0, 0, 0, .87);
   text-decoration: none;
